# freeimage

./: CMakeLists.txt  FreeImage.h  conandata.yml  conanfile.txt
FreeImage/: BitmapAccess.cpp  Conversion16_565.cpp  GetType.cpp  PixelAccess.cpp  Plugin.cpp  PluginJPEG.cpp
FreeImageToolkit/: JPEGTransform.cpp
